# nori_aligned_bridge

./: .env  .env.devnet  .env.hoodi  .env.local  .env.mainnet  .env.sepolia  .env.template  .gitignore  Cargo.toml  Makefile  README.md  count_account_transactions.sh  count_account_transactions.sh.out2  count_account_transactions.sh.out3  hourly_task.sh  repro_snarked_ledger_membership_502.sh  repro_snarked_ledger_membership_502.sh.out  repro_snarked_ledger_membership_502.sh.out2  repro_snarked_ledger_membership_502.sh.out3
.github/: CODEOWNERS
contract/src/: MinaAccountValidationExample.sol  MinaStateSettlementExample.sol  NoriTokenBridge.sol
contract_bindings/: .gitattributes  Cargo.toml  bridge-sdk.ref  build.rs
contract_bindings/src/: lib.rs
contract_deployer/: Cargo.toml
contract_deployer/src/: main.rs
core/: Cargo.toml  accoun_query_response.json
core/abi/: MinaAccountValidationExample.json  MinaStateSettlementExample.json  NoriTokenBridge.json
core/graphql/: account_query.graphql  block_at_height_query.graphql  frontier_query.graphql  staged_account_query.graphql  state_proof_block_query.graphql
core/graphql/archive/: address_events_query.graphql  canonical_block_query.graphql  schema.json
core/src/: aligned.rs  aligned_2.rs  error.rs  eth.rs  eth_2.rs  eth_2_deploy.rs  lib.rs  main.rs  mina.rs  mina_archive.rs  mina_daemon.rs  nori.rs  pubkey.rs  sdk.rs
core/src/proof/: state_proof.rs
core/src/rpcs/: aligned.rs  errors.rs  eth.rs  mina_archive.rs  mina_daemon.rs  mod.rs
core/src/sol/: account.rs  serialization.rs
core/src/utils/: constants.rs  env.rs  mod.rs  token_id.rs  vk_hash.rs  wallet.rs  wallet_alloy.rs
example/app/: Cargo.toml
example/app/abi/: SudokuValidity.json
example/app/src/: main.rs
example/mina_zkapp/: config.json
example/mina_zkapp/src/: run.ts
mina_state_verifier/: Cargo.toml  mina_verifier.h
mina_state_verifier/src/: consensus_state.rs  lib.rs  verifier_index.rs
mina_state_verifier/src/proof/: mod.rs
mina_state_verifier/src/sol/: mod.rs
mina_state_verifier/src/utils/: constants.rs
