[workspace]
members = ["core", "mina_state_verifier", "contract_deployer"]
resolver = "2"

[workspace.dependencies]
# aligned
mina_bridge_core = { path = "core" }
mina_state_verifier = { path = "mina_state_verifier" }

# General
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6.0"
serde_json = "1.0"
num-bigint = "0.4.3"
rmp-serde = "1.1.2"
hex = "0.4.3"
reqwest = { version = "^0.12", features = ["blocking"] }
kimchi = { git = "https://github.com/lambdaclass/openmina-proof-systems", rev = "44e0d3b98b8747de54e595f53d97c035ff43167c" }
mina-signer = { git = "https://github.com/lambdaclass/openmina-proof-systems", rev = "44e0d3b98b8747de54e595f53d97c035ff43167c" }
poly-commitment = { git = "https://github.com/lambdaclass/openmina-proof-systems", rev = "44e0d3b98b8747de54e595f53d97c035ff43167c" }
mina-curves = { git = "https://github.com/lambdaclass/openmina-proof-systems", rev = "44e0d3b98b8747de54e595f53d97c035ff43167c" }
o1-utils = { git = "https://github.com/lambdaclass/proof-systems", rev = "5bdeab3c2a43a671645952f63b9354b7a20b2326" }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
ark-serialize = "0.3.0"
mina-tree = { git = "https://github.com/lambdaclass/openmina/", rev = "97df7ca5e3b631c99c9fa23a9ff8c76b4120504c" }
mina-p2p-messages = { git = "https://github.com/lambdaclass/openmina/", rev = "97df7ca5e3b631c99c9fa23a9ff8c76b4120504c" }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer.git", rev = "11d1801a86bedb375c8ccdd0d77074a7134a7427" }
ethers = { version = "2.0", features = ["ws", "rustls"] }
rpassword = "7.3.1"
tokio = "1.39.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
base64 = "0.22.1"
graphql_client = { version = "0.16.0", features = [
  "reqwest",
  "reqwest-blocking",
] }
mina-state-verifier = { path = "mina_state_verifier" }
alloy = { version = "1.7.3", features = ["full", "json-rpc", "signer-keystore"] }
clap = { version = "4.5.4", features = ["derive"] }
sha3 = "0.10.8"
bincode = "1.3.3"
futures = "0.3.30"
num-traits = "0.2.19"
alloy-sol-types = "1.5.7"
alloy-contract = "1.7.3"
zeroize = "1.8.1"
bs58 = "0.5.1"
lazy_static = "1.5.0"
blake2 = "0.10.6"
once_cell = "1.19.0"
rust_decimal = "1.36"
chrono = "0.4.42"

[patch.crates-io]
ark-ff = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-ec = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-poly = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-serialize = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }

[patch.'https://github.com/openmina/algebra']
ark-ff = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-ec = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-poly = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-serialize = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
