[workspace]
members = ["core", "mina_state_verifier", "contract_deployer", "contract_bindings", "services"]
resolver = "2"

[workspace.dependencies]
# Internal
mina_bridge_core = { path = "core" }
mina-state-verifier = { path = "mina_state_verifier" }
nori-contract-bindings = { path = "contract_bindings" }

# General
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6.0"
serde_json = "1.0"
num-bigint = "0.4.3"
rmp-serde = "1.1.2"
hex = "0.4.3"
reqwest = { version = "^0.12", features = ["blocking"] }
kimchi = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
ark-ff = { version = "0.5.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-poly = { version = "0.5.0", features = ["parallel"] }
ark-serialize = "0.5.0"
mina-tree = { git = "https://github.com/o1-labs/mina-rust", branch = "develop" }
mina-p2p-messages = { git = "https://github.com/o1-labs/mina-rust", branch = "develop" }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer.git", rev = "cf7cd54265f0ec39d158f00c4ca400ffaa9887d4" }
ethers = { version = "2.0", features = ["ws", "rustls"] }
rpassword = "7.3.1"
tokio = "1.39.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
base64 = "0.22.1"
graphql_client = { version = "0.16.0", features = [
  "reqwest",
  "reqwest-blocking",
] }
alloy = { version = "1.7.3", features = ["full", "json-rpc", "signer-keystore"] }
clap = { version = "4.5.4", features = ["derive"] }
sha3 = "0.10.8"
bincode = "1.3.3"
futures = "0.3.30"
num-traits = "0.2.19"
alloy-sol-types = "1.5.7"
alloy-contract = "1.7.3"
zeroize = "1.8.1"
bs58 = "0.5.1"
lazy_static = "1.5.0"
blake2 = "0.10.6"
once_cell = "1.19.0"
rust_decimal = "1.36"
chrono = "0.4.42"

[patch.crates-io]
num-bigint = { git = "https://github.com/openmina/num-bigint", branch = "rebase-onstack" }
num-rational = { git = "https://github.com/openmina/num-rational", branch = "rebase-onstack" }

