[package]
name = "contract_deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
mina_bridge_core = { workspace = true }
aligned-sdk = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
alloy = { workspace = true }
clap = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
