[package]
name = "mina_bridge_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }
rmp-serde = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
kimchi = { workspace = true }
mina-signer = { workspace = true }
poly-commitment = { workspace = true }
mina-curves = { workspace = true }
o1-utils = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
mina-tree = { workspace = true }
mina-p2p-messages = { workspace = true }
aligned-sdk = { workspace = true }
ethers = { workspace = true }
rpassword = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
graphql_client = { workspace = true }
mina-state-verifier = { workspace = true }
alloy = { workspace = true }
clap = { workspace = true }
sha3 = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
num-traits = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }
zeroize = { workspace = true }