[package]
name = "mina-state-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
devnet = []

[dependencies]
kimchi = { workspace = true }
poly-commitment = { workspace = true }
mina-curves = { workspace = true }
o1-utils = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
mina-tree = { workspace = true }
mina-p2p-messages = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
lazy_static = { workspace = true }
blake2 = { workspace = true }
once_cell = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
